# cloot

./: .replit  cli.py  cloud_auth.py  forum_scraper.py  main.py  models.py  openai_helper.py  pyproject.toml
attached_assets/: Pasted-Here-are-some-potential-improvements-for-the-Cloot-landing-page-based-on-the-screenshot-1-Improve-1740532459788.txt
templates/: folder_details.html  folders.html  index.html  landing.html  login.html  payment_success.html  register.html  upgrade.html
